--- a/Task1.html
+++ b/Task1.html
@@ -108,9 +108,9 @@
                 lettergrade ="A";
                 }else if(avg2>=68 && avg<=79){
                 lettergrade ="B";
-                }else if(avg2>=55 && avg<=67)
+                }else if(avg2>=55 && avg<=67){
                 lettergrade ="C";
-                else if(avg2>=50 && avg<=54){
+                }else if(avg2>=50 && avg<=54){
                 lettergrade = "D"}
                 }else{
                     lettergrade = "F";
